# mboek-python-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: openapi.json
mboek/: __init__.py  _client.py  _exceptions.py  _parsers.py  _unset.py
mboek/models/: __init__.py  _enums.py  administraties.py  auth.py  auto_booking_rules.py  boekingen.py  boekjaren.py  btw_aangifte.py  btw_codes.py  dagboeken.py  export_import.py  grootboekrekeningen.py  jaarrekening.py  maintenance.py  reports.py
mboek/resources/: __init__.py  _admin_scope.py  _base.py  _boekjaar_scope.py  _dagboek_scope.py  administraties.py  auth.py  auto_booking_rules.py  boekingen.py  boekjaren.py  btw_aangifte.py  btw_codes.py  dagboeken.py  export_import.py  grootboekrekeningen.py  import_.py  jaarrekening.py  maintenance.py  reports.py
tests/: conftest.py  test_administraties.py  test_auth.py  test_auto_booking_rules.py  test_boekingen.py  test_boekjaren.py  test_btw_aangifte.py  test_btw_codes.py  test_dagboeken.py  test_export_import.py  test_grootboekrekeningen.py  test_jaarrekening.py  test_maintenance.py  test_models_public_api.py  test_patch_clearing.py  test_reports.py
